edited fullpage class to adjust height to stop fixed footer covering page content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,7 +12,7 @@ body {
 
 .full-page {
     position: relative;
-    height: 95vh;
+    height: 120vh;
 }
 
 .background-color {
